--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 
@@ -180,24 +180,20 @@
 {% endif %}
 
 {% set pageTitle = applicationName + " - Edit an offence" %}
-{% block content %}
+{% block pageContent %}
     {{ super() }}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/submit-edit-offence">
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/offenceCaption.njk" %}
-                <h1 class="govuk-heading-l">Edit offence details</h1>
+    <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/submit-edit-offence">
+        <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+        {% include "../../partials/offenceCaption.njk" %}
+        <h1 class="govuk-heading-l">Edit offence details</h1>
 
-                {{ govukSummaryList({
-                    rows: summaryRows
-                }) }}
+        {{ govukSummaryList({
+            rows: summaryRows
+        }) }}
 
-                {{ govukButton({
-                    text: "Accept changes",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
-            </form>
-        </div>
-    </div>
+        {{ govukButton({
+            text: "Accept changes",
+            attributes: {  'data-qa': 'continue-button' }
+        }) }}
+    </form>
 {% endblock %}
