--- a/server/views/pages/courtAppearance/next-hearing-court-name.njk
+++ b/server/views/pages/courtAppearance/next-hearing-court-name.njk
@@ -1,56 +1,49 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 
-
-
 {% set pageTitle = applicationName + " - Add a court case next hearing court name" %}
 
-{% block content %}
+{% block pageContent %}
     {{ super() }}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
-            <form method="post">
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <input type="hidden" name="courtCode" id="court-code" value="{{nextHearingCourtNameForm.courtCode}}">
-                {% include "../../partials/nextAppearanceCaption.njk" %}
-                {{ govukSelect({
-                    label: {
-                        text: "What court is the next hearing at?"  if isAddCourtAppearance else "Edit next court hearing location",
-                        classes: "govuk-label--l",
-                        isPageHeading: true
-                    },
-                    hint: {
-                        text: "Start typing the name of the court from the warrant."
-                    },
-                    id: "next-hearing-court-name",
-                    name: "nextHearingCourtName",
-                    errorMessage: errors | findError('courtCode'),
-                    items: []
-                }) }}
+    <form method="post">
+        <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+        <input type="hidden" name="courtCode" id="court-code" value="{{nextHearingCourtNameForm.courtCode}}">
+        {% include "../../partials/nextAppearanceCaption.njk" %}
+        {{ govukSelect({
+            label: {
+                text: "What court is the next hearing at?"  if isAddCourtAppearance else "Edit next court hearing location",
+                classes: "govuk-label--l",
+                isPageHeading: true
+            },
+            hint: {
+                text: "Start typing the name of the court from the warrant."
+            },
+            id: "next-hearing-court-name",
+            name: "nextHearingCourtName",
+            errorMessage: errors | findError('courtCode'),
+            items: []
+        }) }}
 
-                <div class="govuk-button-group">
-                    <button type="submit"
-                            class="govuk-button"
-                            data-module="govuk-button"
-                            data-qa="continue-button"
-                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-court-name{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
-                        Continue
-                    </button>
-                    {% if featureToggles.saveDraftEnabled %}
-                        <button type="submit"
-                                class="govuk-button govuk-button--secondary"
-                                data-module="govuk-button"
-                                data-qa="save-draft-button"
-                                formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
-                            Save as draft
-                        </button>
-                    {% endif %}
-                </div>
-            </form>
-
+        <div class="govuk-button-group">
+            <button type="submit"
+                    class="govuk-button"
+                    data-module="govuk-button"
+                    data-qa="continue-button"
+                    formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-court-name{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
+                Continue
+            </button>
+            {% if featureToggles.saveDraftEnabled %}
+                <button type="submit"
+                        class="govuk-button govuk-button--secondary"
+                        data-module="govuk-button"
+                        data-qa="save-draft-button"
+                        formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
+                    Save as draft
+                </button>
+            {% endif %}
         </div>
-    </div>
+    </form>
 
 {% endblock %}
 
