--- a/server/views/pages/courtAppearance/next-hearing-select.njk
+++ b/server/views/pages/courtAppearance/next-hearing-select.njk
@@ -1,60 +1,54 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {% set pageTitle = applicationName + " - Next hearing been set" %}
-{% block content %}
+{% block pageContent %}
     {{ super() }}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
-            <form method="post">
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/nextAppearanceCaption.njk" %}
-                {{ govukRadios({
-                    name: "nextHearingSelect",
-                    fieldset: {
-                        legend: {
-                        text: "Has the next hearing been set?",
-                        isPageHeading: true,
-                        classes: "govuk-fieldset__legend--l"
-                        }
-                    },
-                    items: [
-                        {
-                            value: "true",
-                            text: "Yes, it has been set",
-                            checked: nextHearingSelectForm.nextHearingSelect === 'true'
-                        },
-                        {
-                            value: "false",
-                            text: "No, date to be fixed",
-                            checked: nextHearingSelectForm.nextHearingSelect === 'false'
-                        }
-                    ]
-                }) }}
+    <form method="post">
+        <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+        {% include "../../partials/nextAppearanceCaption.njk" %}
+        {{ govukRadios({
+            name: "nextHearingSelect",
+            fieldset: {
+                legend: {
+                text: "Has the next hearing been set?",
+                isPageHeading: true,
+                classes: "govuk-fieldset__legend--l"
+                }
+            },
+            items: [
+                {
+                    value: "true",
+                    text: "Yes, it has been set",
+                    checked: nextHearingSelectForm.nextHearingSelect === 'true'
+                },
+                {
+                    value: "false",
+                    text: "No, date to be fixed",
+                    checked: nextHearingSelectForm.nextHearingSelect === 'false'
+                }
+            ]
+        }) }}
 
-                <div class="govuk-button-group">
-                    <button type="submit"
-                            class="govuk-button"
-                            data-module="govuk-button"
-                            data-qa="continue-button"
-                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-select{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
-                        Continue
-                    </button>
+        <div class="govuk-button-group">
+            <button type="submit"
+                    class="govuk-button"
+                    data-module="govuk-button"
+                    data-qa="continue-button"
+                    formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-select{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
+                Continue
+            </button>
 
-                    {% if featureToggles.saveDraftEnabled %}
-                        <button type="submit"
-                                class="govuk-button govuk-button--secondary"
-                                data-module="govuk-button"
-                                data-qa="save-draft-button"
-                                formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
-                            Save as draft
-                        </button>
-                    {% endif %}
-                </div>
-            </form>
-
+            {% if featureToggles.saveDraftEnabled %}
+                <button type="submit"
+                        class="govuk-button govuk-button--secondary"
+                        data-module="govuk-button"
+                        data-qa="save-draft-button"
+                        formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
+                    Save as draft
+                </button>
+            {% endif %}
         </div>
-    </div>
-
+    </form>
 {% endblock %}
