RASS-1296 appearance details for overall case outcome sentencing

--- a/server/views/pages/overallSentencing/overall-case-outcome.njk
+++ b/server/views/pages/overallSentencing/overall-case-outcome.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
@@ -48,23 +48,18 @@
     {% endfor %}
 {% endif %}
 
-{% block content %}
+{% block pageContent %}
     {{ super() }}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-overall-case-outcome{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/overallWarrantInformationCaption.njk" %}
+    <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-overall-case-outcome{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
+        <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+        {% include "../../partials/overallWarrantInformationCaption.njk" %}
 
-                {{ govukRadios(radiosData) }}
+        {{ govukRadios(radiosData) }}
 
-                {{ govukButton({
-                    text: "Continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
-            </form>
-
-        </div>
-    </div>
+        {{ govukButton({
+            text: "Continue",
+            attributes: {  'data-qa': 'continue-button' }
+        }) }}
+    </form>
 
 {% endblock %}
