--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -100,7 +100,7 @@
                     text: "Sentence type"
                 },
                     value: {
-                    text: sentenceType | sentenceTypeValueOrLegacy(offence.sentence.legacyData)
+                    text: sentenceType
                 } if sentenceType else {
                     html: '<a href="/person/' + nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + chargeUuid + '/sentence-type?submitToEditOffence=true" data-qa="edit-sentence-type- ' + chargeUuid + '">Enter sentence type</a>'
                 },
