RASS-1153-Timer implemented for appearance session out

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -16,3 +16,4 @@ $govuk-page-width: $moj-page-width;
 @import './components/action-list';
 @import './components/alternative-sentence-length';
 @import './overrides/local';
+@import './components/session-warning';
