renaming session-warning

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -66,7 +66,7 @@
 {% endblock %}
 
 {% block bodyStart %}
-  {% include "./_session-warning.njk" %}
+  {% include "./session-warning.njk" %}
 {% endblock %}
 
 {% block footer %}
